syntax = "proto3";

package attest;

option go_package = "github.com/radiusxyz/lightbulb-tdx/proto/attest";

import "proto/tdx/quote.proto";

service AttestService {
  rpc GetQuote (GetQuoteRequest) returns (GetQuoteResponse);
}

message GetQuoteRequest {
  bytes report_data = 1;
}

message GetQuoteResponse {
  td.QuoteV4 quote = 1;
}